# HudBox

./: .gitignore  CMakeLists.txt  README.md  install-ppa.sh  main.c
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml  hudbox-pages-deploy.yml  release.yml
app/: .gitattributes  CMakeLists.txt
app/debian/: changelog  control
app/src/: hb_config.c  hb_css.c  hb_css.h  hb_window.c
app/tests/: test_hb_config.c  test_hb_window.c
debian/: rules
site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
site/blog/2021-08-26-welcome/: index.md
site/docs/: intro.md
site/docs/tutorial-basics/: markdown-features.mdx
site/src/components/HomepageFeatures/: index.js  styles.module.css
site/src/css/: custom.css
site/src/pages/: index.js
src/: hb_config.c  hb_config.h  hb_window.h  main.c
tests/: test_hb_css.c
